Added new profiles for local development and local docker development. Also Renamed eureka naming server to discovery-service. In addition added api urls for api-gateway to be defined in .properties files.